<resources>
    <string name="app_name">老人信息采集</string>
    <string name="login_page_app_name">护理</string>
    <string name="login_page_app_client_type">居民端</string>
    <string name="index_page_title">安徽救助工作平台</string>
    <string name="index_page_policy_translate">政策新闻</string>
    <string name="index_page_policy_more">更多></string>
    <string name="index_page_remind">智能履约提醒</string>
    <string name="index_page_show_family_remind">显示家庭成员提醒></string>
    <string name="index_page_message_sent_by_doctor_hint">医生消息</string>
    <string name="remind_page_call_doctor">一键呼叫医生</string>
    <string name="index_default_area_name">全市</string>
    <string name="hint_select_area">请选择区域</string>
    <string name="query">查询</string>
    <string name="statistics_list">统计列表</string>
    <string name="statistics_chart">统计图</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="hint_suggestion">提示</string>
    <string name="hint_whether_lock_hospital">确定锁定该住院信息?</string>
    <string name="hint_whether_unlock_hospital">确定解锁该住院信息?</string>
    <string name="hint_select_one_item">您选中了一项</string>
    <string name="hint_confirm_to_execute">确定要执行吗?</string>
    <string name="hint_confirm_to_sign">确定要签约吗?</string>
    <string name="hint_confirm_to_cancel_application">确定要取消申请吗?</string>
    <string name="hint_confirm_to_read_sign_service_assess_item">确定要阅读此条评价吗?阅读后将收入已查阅列表。</string>
    <string name="hint_accumulated_assess_star_level">累计评价星级</string>
    <string name="hint_total_paid_package">总有偿包</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="send">发送</string>
    <string name="back">返回</string>
    <string name="color_preset">预设</string>
    <string name="color_custom">自定义颜色</string>
    <string name="color_preset_first_level">预设颜色第一级</string>
    <string name="color_preset_second_level">预设颜色第二级</string>
    <string name="folder_select_button_title">选取</string>
    <string name="new_folder_action_name">新建文件夹</string>
    <string name="please_select_sign_year">请选择签约年份</string>
    <string name="login_page_forget_password">忘记密码?</string>
    <string name="login_page_register_immediately">立即注册</string>
    <string name="login_username">账号</string>
    <string name="login_password">密码</string>
    <string name="login_please_input_username">请输入账号</string>
    <string name="login_please_input_password">请输入登录密码</string>
    <string name="register_nickname">昵称</string>
    <string name="register_id_card">身份证</string>
    <string name="register_phone_prefix">+86</string>
    <string name="register_password">密码</string>
    <string name="register_hint_nickname">请输入昵称</string>
    <string name="register_hint_id_card">请输入身份证号</string>
    <string name="register_hint_phone">请输入手机号</string>
    <string name="register_hint_password">请输入密码</string>
    <string name="retrieve_password_hint_new_password">新密码</string>
    <string name="retrieve_password_hint_confirm_password">确认密码</string>
    <string name="add_family_member_hint_family_member_name">请输入家庭成员名称</string>
    <string name="add_family_member_hint_family_member_id_card_number">请输入家庭成员身份证号</string>
    <string name="add_family_member_hint_relationship_to_login_user">与登录用户的关系</string>
    <string name="relationship_self">本人或户主</string>
    <string name="relationship_spouse">配偶</string>
    <string name="relationship_son">子</string>
    <string name="relationship_daughter">女</string>
    <string name="relationship_grandson">孙子</string>
    <string name="relationship_granddaughter">孙女、外孙子、外孙女</string>
    <string name="relationship_parent">父母</string>
    <string name="relationship_grand_parent">祖父母、外祖父母</string>
    <string name="relationship_sibling">兄弟姐妹</string>
    <string name="relationship_other">其他</string>
    <string name="relationship_daughter_in_law">儿媳</string>
    <string name="register_hint_nickname_empty">昵称不能为空</string>
    <string name="register_hint_nickname_invalid">昵称不合法</string>
    <string name="register_hint_id_card_empty">身份证号不能为空</string>
    <string name="register_hint_id_card_invalid">身份证号不合法</string>
    <string name="register_hint_phone_empty">手机号码不能为空</string>
    <string name="register_hint_phone_invalid">手机号码不合法</string>
    <string name="register_hint_password_empty">密码不能为空</string>
    <string name="register_hint_password_invalid">密码不合法</string>
    <string name="retrieve_password_hint_new_password_empty">新密码不能为空</string>
    <string name="retrieve_password_hint_new_password_invalid">新密码不合法</string>
    <string name="retrieve_password_hint_confirm_password_empty">确认密码不能为空</string>
    <string name="retrieve_password_hint_confirm_password_invalid">确认密码不合法</string>
    <string name="retrieve_password_hint_two_password_not_equal">两次密码不一致</string>
    <string name="add_family_member_not_select_relationship">请选择与登录用户的关系</string>
    <string name="add_family_member_hint_name_empty">家庭成员名称不能为空</string>
    <string name="activity_title_login">登录</string>
    <string name="activity_title_treatment">诊断</string>
    <string name="activity_title_chat">聊天</string>
    <string name="activity_title_medical_institution">医疗机构</string>
    <string name="activity_title_medical_institution_info">医院信息</string>
    <string name="activity_title_canhe_info">参合信息</string>
    <string name="activity_title_canhe_detail_info">参合详情</string>
    <string name="activity_title_compensate_info">补偿信息</string>
    <string name="activity_title_compensate_detail_info">补偿详情</string>
    <string name="activity_title_compensate_fee_detail">补偿费用详情</string>
    <string name="activity_title_image_display">图片显示</string>
    <string name="activity_title_latest_7_days_need_execute_projects">近7天需要执行项目</string>
    <string name="activity_title_my_info">我的信息</string>
    <string name="activity_title_directory">通讯录</string>
    <string name="activity_title_my_sign_info">我的签约信息</string>
    <string name="activity_title_sign_service_assess">主动发现</string>
    <string name="activity_title_sign_service_income">签约服务收入</string>
    <string name="activity_title_intelligent_honour_agreement_remind">智能履约提醒</string>
    <string name="activity_title_sign_application">签约申请</string>
    <string name="activity_title_appointment_registration">预约挂号</string>
    <string name="activity_title_online_consultation">民政对象</string>
    <string name="activity_title_reservation_execution">预约执行</string>
    <string name="activity_title_register_info">注册信息</string>
    <string name="activity_title_policy_translate">政策新闻</string>
    <string name="activity_title_policy_translate_detail">政策新闻详情</string>
    <string name="activity_title_notification">通知公告</string>
    <string name="activity_title_notification_detail">通知公告详情</string>
    <string name="activity_title_retrieve_password">忘记密码</string>
    <string name="activity_title_family_member">家庭成员</string>
    <string name="activity_title_add_family_member">添加家庭成员</string>
    <string name="activity_title_nursing_detail">护理详情</string>
    <string name="activity_title_map_service">地图服务</string>
    <string name="activity_title_select_map_location">地图选点</string>
    <string name="activity_title_area_select">区域设置</string>
    <string name="activity_title_bus_route">公交路线规划</string>
    <string name="fragment_title_inhospital_inspect">签约信息</string>
    <string name="fragment_title_heyiban">签约居民信息</string>
    <string name="fragment_title_mine">我的</string>
    <string name="fragment_title_all">查询</string>
    <string name="fragment_title_statistics">统计</string>
    <string name="fragment_title_handle">办理</string>
    <string name="activity_title_setting">设置</string>
    <string name="hint_check_update">检测更新</string>
    <string name="hint_whether_enable_push">是否接收推送通知</string>
    <string name="hint_allowed_push_time">允许推送时间</string>
    <string name="hint_allowed_push_start_time">允许推送起始小时值</string>
    <string name="hint_allowed_push_end_time">允许推送结束小时值</string>
    <string name="hint_push_silence_time">推送静默时间</string>
    <string name="hint_push_silence_start_time">推送静默起始时间</string>
    <string name="hint_push_silence_end_time">推送静默结束时间</string>
    <string name="hint_home_round_visit">家庭巡诊</string>
    <string name="hint_blood_pressure">血压</string>
    <string name="hint_execute">执行</string>
    <string name="hint_service_project">服务项目</string>
    <string name="hint_execution_time">执行时间</string>
    <string name="hint_assess_level">评价星级</string>
    <string name="hint_assess_time">评价时间</string>
    <string name="hint_assess_content">评价内容</string>
    <string name="my_info_username">用户名</string>
    <string name="my_info_account">账\u0020\u0020\u0020\u0020号</string>
    <string name="hint_id_number">身份证号</string>
    <string name="hint_archive_number">档案号</string>
    <string name="hint_application_time">申请时间</string>
    <string name="hint_desired_service_package">意向服务包</string>
    <string name="hint_home_address">家庭住址</string>
    <string name="hint_sign">签约</string>
    <string name="hint_cancel_application">取消申请</string>
    <string name="hint_read">阅读</string>
    <string name="hint_username">用户姓名：</string>
    <string name="hint_login_account">登录账号：</string>
    <string name="hint_login_alias">登录别名：</string>
    <string name="hint_id_card_number">身份证号：</string>
    <string name="hint_institution_name">机构名称：</string>
    <string name="hint_contact_number">联系电话：</string>
    <string name="hint_update_phone_number">更新电话</string>
    <string name="hint_total_fee">总费用</string>
    <string name="hint_can_compensate_fee">可补偿</string>
    <string name="hint_actual_compensate_fee">实际补偿</string>
    <string name="hint_signed_resident_client_fund">签约居民端</string>
    <string name="hint_family_accumulation">家庭累计：</string>
    <string name="hint_individual_accumulation">个人累计：</string>
    <string name="hint_input_username">请输入用户名</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_name_or_id_card_number">请输入姓名/身份证号</string>
    <string name="hint_input_chat_msg">请输入将要发送的消息</string>
    <string name="remember_password">记住密码</string>
    <string name="button_title_login">登录</string>
    <string name="button_title_qianyue">签约完成</string>
    <string name="institution_info">机构信息</string>
    <string name="please_select_date">请选择日期</string>
    <string name="please_select_time">请选择时间</string>
    <string name="please_select_start_date">请选择起始日期</string>
    <string name="please_select_end_date">请选择结束日期</string>
    <string name="please_select_start_time">请选择起始时间</string>
    <string name="please_select_end_time">请选择结束时间</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_profile">修改个人信息</string>
    <string name="take_photo">拍照</string>
    <string name="hint_register">点击上面的“注册”按钮，即表示你同意《签约软件许可协议》和《签约隐私政策》</string>
    <string name="search_hint">请输入关键字</string>
    <string name="drop_down_list_header_default_text">点击可以刷新</string>
    <string name="drop_down_list_header_pull_text">下拉可以刷新</string>
    <string name="drop_down_list_header_release_text">松开可以刷新</string>
    <string name="drop_down_list_header_loading_text">加载中&#8230;</string>
    <string name="drop_down_list_footer_default_text">更多</string>
    <string name="drop_down_list_footer_loading_text">加载中&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">没有更多了</string>
    <string name="input_hint">发送消息</string>
    <string name="message_click_hint">消息被点击</string>
    <string name="message_long_click_hint">消息被长按</string>
    <string name="avatar_click_hint">头像被点击</string>
    <string name="rationale_record_voice">此应用需要麦克风权限以便录音</string>
    <string name="rationale_photo">此应用需要访问图片权限</string>
    <string name="rationale_camera">此应用需要访问摄像头权限</string>
    <string name="siged_sever_class">签约服务包选择</string>
    <string name="hint_load_failure">加载失败,点我刷新</string>
    <string name="hint_list_empty_please_reload">暂无数据,点我刷新</string>
    <string name="hint_list_not_empty_and_all_is_zero_please_reload">数据全为0,点我刷新</string>
</resources>