<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:f="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        layout="@layout/activity_add_family_member_head_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/register_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_family_member_hint_relationship_to_login_user"
                    android:layout_marginTop="@dimen/dp_6"
                    android:textColor="@color/colorTheme"
                    android:textSize="@dimen/txt_size_normal" />

                <org.apmem.tools.layouts.FlowLayout
                    android:id="@+id/fl_relationship"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:gravity="fill"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/dp_6"
                    f:debugDraw="false"
                    f:layoutDirection="ltr"
                    f:weightDefault="1.0">
                    <com.mixiaoxiao.smoothcompoundbutton.SmoothRadioButton
                        android:id="@+id/rb_self"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#818181"
                        android:textSize="@dimen/txt_size_14"
                        android:text="@string/relationship_self" />
                    <com.mixiaoxiao.smoothcompoundbutton.SmoothRadioButton
                        android:id="@+id/rb_spouse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#818181"
                        android:textSize="@dimen/txt_size_14"
                        android:text="@string/relationship_spouse" />
                    <com.mixiaoxiao.smoothcompoundbutton.SmoothRadioButton
                        android:id="@+id/rb_son"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#818181"
                        android:textSize="@dimen/txt_size_14"
                        android:text="@string/relationship_son" />
                    <com.mixiaoxiao.smoothcompoundbutton.SmoothRadioButton
                        android:id="@+id/rb_daughter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#818181"
                        android:textSize="@dimen/txt_size_14"
                        android:text="@string/relationship_daughter" />
                    <com.mixiaoxiao.smoothcompoundbutton.SmoothRadioButton
                        android:id="@+id/rb_grand_son"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#818181"
                        android:textSize="@dimen/txt_size_14"
                        android:text="@string/relationship_grandson" />
                    <com.mixiaoxiao.smoothcompoundbutton.SmoothRadioButton
                        android:id="@+id/rb_grand_daughter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#818181"
                        android:textSize="@dimen/txt_size_14"
                        android:text="@string/relationship_granddaughter" />
                    <com.mixiaoxiao.smoothcompoundbutton.SmoothRadioButton
                        android:id="@+id/rb_parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#818181"
                        android:textSize="@dimen/txt_size_14"
                        android:text="@string/relationship_parent" />
                    <com.mixiaoxiao.smoothcompoundbutton.SmoothRadioButton
                        android:id="@+id/rb_grandparent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#818181"
                        android:textSize="@dimen/txt_size_14"
                        android:text="@string/relationship_grand_parent" />
                    <com.mixiaoxiao.smoothcompoundbutton.SmoothRadioButton
                        android:id="@+id/rb_sibling"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#818181"
                        android:textSize="@dimen/txt_size_14"
                        android:text="@string/relationship_sibling" />
                    <com.mixiaoxiao.smoothcompoundbutton.SmoothRadioButton
                        android:id="@+id/rb_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#818181"
                        android:textSize="@dimen/txt_size_14"
                        android:text="@string/relationship_other" />
                    <com.mixiaoxiao.smoothcompoundbutton.SmoothRadioButton
                        android:id="@+id/rb_daughter_in_law"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#818181"
                        android:textSize="@dimen/txt_size_14"
                        android:text="@string/relationship_daughter_in_law" />


                </org.apmem.tools.layouts.FlowLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_22"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <!--<TextView-->
                    <!--android:layout_width="@dimen/register_hint_width"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/register_id_card"-->
                    <!--android:textColor="@color/login_text_color"-->
                    <!--android:textSize="@dimen/txt_size_normal" />-->
                    <ImageView
                        android:layout_width="@dimen/dp_18"
                        android:layout_height="@dimen/dp_18"
                        android:scaleType="fitXY"
                        android:src="@mipmap/r_person" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/acet_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_normal"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/add_family_member_hint_family_member_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/colorTheme"
                        android:textSize="@dimen/txt_size_normal" />

                    <Button
                        android:id="@+id/bt_name_clear"
                        android:layout_width="@dimen/img_width_small"
                        android:layout_height="@dimen/img_height_small"
                        android:layout_marginLeft="@dimen/margin_normal"
                        android:background="@mipmap/clear_blue" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginTop="@dimen/dp_6"
                    android:background="@color/colorTheme" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_22"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <!--<TextView-->
                    <!--android:layout_width="@dimen/register_hint_width"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/register_id_card"-->
                    <!--android:textColor="@color/login_text_color"-->
                    <!--android:textSize="@dimen/txt_size_normal" />-->
                    <ImageView
                        android:layout_width="@dimen/dp_18"
                        android:layout_height="@dimen/dp_18"
                        android:scaleType="fitXY"
                        android:src="@mipmap/r_id_card" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/acet_id_card"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_normal"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/add_family_member_hint_family_member_id_card_number"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/colorTheme"
                        android:textSize="@dimen/txt_size_normal" />

                    <Button
                        android:id="@+id/bt_id_card_clear"
                        android:layout_width="@dimen/img_width_small"
                        android:layout_height="@dimen/img_height_small"
                        android:layout_marginLeft="@dimen/margin_normal"
                        android:background="@mipmap/clear_blue" />


                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginTop="@dimen/dp_6"
                    android:background="@color/colorTheme" />



                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/bt_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_22"
                    android:background="@drawable/green_background_corner_radius"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_size_normal" />


            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>